@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-12-18 (CVS):
+    * Reorganized cdaudio volume handling for all drivers. If volume is 0,
+      don't bother advancing and pause.
+
 2010-12-17 (CVS):
     * small cleanups, mostly whitespace.
 
